@startuml
package ImplementationsABC {

  interface InterfaceABC {
    {field} InterfaceA
    {field} InterfaceB
    {field} InterfaceC
  }

  interface InterfaceA {
    MethodA() string
  }

  interface InterfaceB {
    MethodB() string
  }

  interface InterfaceC {
    MethodC() string
  }

  struct ImplementationA {
    MethodA() string
  }

  struct ImplementationB {
    MethodB() string
  }

  struct ImplementationC {
    MethodC() string
  }

  struct ImplementationsABC {
    {field} A InterfaceA
    {field} B InterfaceB
    {field} C InterfaceC
  }

  InterfaceABC ..> InterfaceA : depends on
  InterfaceABC ..> InterfaceB : depends on
  InterfaceABC ..> InterfaceC : depends on

  ImplementationA --|> InterfaceA : implements
  ImplementationB --|> InterfaceB : implements
  ImplementationC --|> InterfaceC : implements

  ImplementationsABC ..> InterfaceA : depends on
  ImplementationsABC ..> InterfaceB : depends on
  ImplementationsABC ..> InterfaceC : depends on

}
@enduml